--- a/src/app/hero-detail/hero-detail.component.html
+++ b/src/app/hero-detail/hero-detail.component.html
@@ -7,5 +7,8 @@
     </label>
   </div>
   <button (click)="goBack()">go back</button>
-  <button (click)="save()">save</button>
+  <button
+    (click)="save()"
+    mat-stroked-button
+  >save</button>
 </div>
